force-app/main/default/objects/PlatformEventLog__b/PlatformEventLog__b.object-meta.xml
<CustomObject>
    <label>Platform Event Log</label>
    <pluralLabel>Platform Event Logs</pluralLabel>
</CustomObject>