force-app/main/default/objects/PlatformEventLog__b/fields/EventCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>EventCreatedDate__c</fullName>
    <description>PlatformEventCreated Date</description>
    <label>EventCreatedDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>