force-app/main/default/objects/PlatformEventLog__b/fields/EventJson__c.field-meta.xml
<CustomField>
    <fullName>EventJson__c</fullName>
    <label>PlatformEventJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>