force-app/main/default/objects/PlatformEventLog__b/fields/EventUuid__c.field-meta.xml
<CustomField>
    <fullName>EventUuid__c</fullName>
    <label>EventUuid</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>