force-app/main/default/objects/PlatformEventLog__b/fields/ReplayId__c.field-meta.xml
<CustomField>
    <fullName>ReplayId__c</fullName>
    <label>ReplayId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>