force-app/main/default/objects/PlatformEventLog__b/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <label>RequestId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>