force-app/main/default/objects/PlatformEventLog__b/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Platform event type</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>