force-app/main/default/objects/PlatformEventLog__b/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>